# Omni.Native

./: CMakeLists.txt  php_terminal.kdev4  terminal.c
common/: CMakeLists.txt  bstring.c  bstring.h  phpmodule.h
editline/: CMakeLists.txt  editline.c
fd/: CMakeLists.txt  fd.c
omni/: CMakeLists.txt  omni.c
omnilang/: CMakeLists.txt  ast.c  ast.h  lexer.l  omnilang.c  parser.output  parser.tab.c  parser.y
tc/: CMakeLists.txt  tc.c
